<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Filters">

    <EditText
        android:id="@+id/searchET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="12dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/search_fields"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filterTV" />

    <ImageButton
        android:id="@+id/searchButtonS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="@+id/include2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/costRG"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/blue_search_button" />


    <ImageButton
        android:id="@+id/searchBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.361"
        app:layout_constraintStart_toEndOf="@+id/searchET"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/blue_search_button" />

    <RadioGroup
        android:id="@+id/capacityRG"
        android:layout_width="114dp"
        android:layout_height="160dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CapacityTV">

        <RadioButton
            android:id="@+id/radioButton5x5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_5x5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.101"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/CapacityTV" />

        <RadioButton
            android:id="@+id/radioButton7x7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_7x7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.101"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioButton5x5" />

        <RadioButton
            android:id="@+id/radioButton8x8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_8x8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.101"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioButton7x7" />

        <RadioButton
            android:id="@+id/radioButton10x10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:text="@string/_10x10"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.105"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioButton8x8"
            app:layout_constraintVertical_bias="0.0" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/costRG"
        android:layout_width="162dp"
        android:layout_height="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.161"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CostTV">

        <RadioButton
            android:id="@+id/radioButtonLH"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/low_to_high" />


        <RadioButton
            android:id="@+id/radioButtonHL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/high_to_low" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/cityRG"
        android:layout_width="117dp"
        android:layout_height="86dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.131"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CityTV">

        <RadioButton
            android:id="@+id/athensRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/athens" />

        <RadioButton
            android:id="@+id/thesRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thesalonniki" />
    </RadioGroup>

    <TextView
        android:id="@+id/CostTV"
        android:layout_width="47dp"
        android:layout_height="31dp"
        android:text="@string/cost"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.102"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cityRG" />

    <TextView
        android:id="@+id/filterTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/filterTV"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/CapacityTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:text="@string/capacity"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchET" />

    <TextView
        android:id="@+id/CityTV"
        android:layout_width="49dp"
        android:layout_height="37dp"
        android:text="@string/city"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.102"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/capacityRG" />

    <include
        android:id="@+id/include5"
        layout="@layout/toolbar"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="-16dp" />


</androidx.constraintlayout.widget.ConstraintLayout>