<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FiltersBasketball">

    <EditText
        android:id="@+id/searchET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/search_fields"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filterTV" />

    <ImageButton
        android:id="@+id/searchBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.361"
        app:layout_constraintStart_toEndOf="@+id/searchET"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/blue_search_button" />

    <ImageButton
        android:id="@+id/searchButtonS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/costRG"
        app:layout_constraintVertical_bias="0.629"
        app:srcCompat="@drawable/blue_search_button" />

    <RadioGroup
        android:id="@+id/cityRG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.117"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cityTV">

        <RadioButton
            android:id="@+id/athensRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:text="@string/athens"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.073"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/filterTV" />

        <RadioButton
            android:id="@+id/thesRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:text="@string/thesalonniki"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.072"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/athensRB"
            app:layout_constraintVertical_bias="0.014" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/costRG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.117"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/costTV">

        <RadioButton
            android:id="@+id/radioButtonLH"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/low_to_high" />


        <RadioButton
            android:id="@+id/radioButtonHL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/high_to_low" />
    </RadioGroup>

    <TextView
        android:id="@+id/filterTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/filter_basketball_fields"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/include2" />

    <TextView
        android:id="@+id/costTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cost"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.086"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cityRG" />

    <TextView
        android:id="@+id/cityTV"
        android:layout_width="45dp"
        android:layout_height="27dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:text="@string/city"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/typeRG" />

    <TextView
        android:id="@+id/typeTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="32dp"
        android:text="@string/type"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchET" />

    <include
        android:id="@+id/include2"
        layout="@layout/toolbar" />

    <RadioGroup
        android:id="@+id/typeRG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/typeTV">

        <RadioButton
            android:id="@+id/indoorRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/indoor" />

        <RadioButton
            android:id="@+id/outdoorRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/outdoor" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>