<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Reserved">


    <include
        android:id="@+id/include4"
        layout="@layout/toolbar" />

    <TextView
        android:id="@+id/reservedTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:text="@string/field_has_benn_reserved"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/fieldIV"
        android:layout_width="220dp"
        android:layout_height="220dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/include4"
        app:layout_constraintTop_toBottomOf="@+id/reservedTV"
        app:layout_constraintVertical_bias="0.131"
        app:srcCompat="@drawable/check"
        android:contentDescription="@string/todo" />

    <Button
        android:id="@+id/confirmBTN"
        android:layout_width="143dp"
        android:layout_height="64dp"
        android:background="#FF9800"
        android:text="@string/back_to_start"
        android:textAllCaps="true"
        android:textColor="#4A4A4A"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/include4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fieldIV"
        app:layout_constraintVertical_bias="0.473" />

</androidx.constraintlayout.widget.ConstraintLayout>